--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prismic-reactjs": "^1.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
     "react-locomotive-scroll": "^0.2.2",
     "sass": "^1.55.0",
     "swiper": "^8.4.2"
