--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prismicio/helpers": "^2.3.5",
     "@prismicio/react": "^2.5.0",
     "@prismicio/slice-simulator-react": "^0.2.2",
+    "gsap": "^3.11.3",
     "locomotive-scroll": "^4.1.4",
     "next": "12.3.1",
     "prismic-reactjs": "^1.3.4",
