aggiunti bottoni social su menu

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -16,7 +16,9 @@
           "blocks": 1
         }
       }
-    }
+    },
+    "contact": {},
+    "social": {}
   },
   "slices": {
     "Gallery": {}
