--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-locomotive-scroll": "^0.2.2",
+    "react-whatsapp-widget": "^2.1.0",
     "sass": "^1.55.0",
     "swiper": "^8.4.2"
   },
